--- a/app/src/main/res/layout/activity_admin_history_details.xml
+++ b/app/src/main/res/layout/activity_admin_history_details.xml
@@ -21,8 +21,48 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="37dp"
-            android:layout_marginTop="25dp"
             android:layout_marginStart="21dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="21dp"
+            app:cardBackgroundColor="#927d52">
+
+            <TextView
+                android:id="@+id/receipt_text3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:text="Reservation Reference Number"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/receipt_reference_number_container"
+            android:layout_width="match_parent"
+            android:layout_height="76dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginEnd="21dp"
+            app:cardBackgroundColor="#161f48">
+
+            <TextView
+                android:id="@+id/disp_refnum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="90dp"
+                android:layout_marginTop="20dp"
+                android:text="LRDCDRR-000XX"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="21dp"
             app:cardBackgroundColor="#927d52">
 
@@ -53,7 +93,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
@@ -68,13 +108,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_name"
+                        android:id="@+id/disp_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="20dp"
                         android:ems="10"
-                        android:text="Artiaga, Angel Reign Lequin"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -98,13 +138,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_usertype"
+                        android:id="@+id/disp_userType"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="Student"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -127,13 +167,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/value_college"
+                        android:id="@+id/disp_dept"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="BSIT"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -156,13 +196,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_idnum"
+                        android:id="@+id/disp_idnum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="2023-132332"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -172,7 +212,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:orientation="horizontal">
-
 
                     <TextView
                         android:id="@+id/reservation_details_txt_contactnum"
@@ -186,13 +225,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_contactnum"
+                        android:id="@+id/disp_cnum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="09271129719"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -216,13 +255,14 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_datereq"
+                        android:id="@+id/disp_reservation_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="5dp"
                         android:ems="10"
-                        android:text="Wednesday, January 15"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -246,13 +286,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_purpose_activity"
+                        android:id="@+id/disp_purpose"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="Group Meeting"
+                        android:text="XXX"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -276,13 +316,12 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_purpose_sched"
+                        android:id="@+id/disp_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:text="Friday, January 17"
+                        android:text="date"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -295,11 +334,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/duration"
+                        android:id="@+id/disp_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="100dp"
-                        android:text="1:00PM to 5:00PM (4hrs)"
+                        android:text="stime AM to etime"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -311,11 +350,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/rooms"
+                        android:id="@+id/disp_rooms"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="100dp"
-                        android:text="Room No. 2 (1 Room)"
+                        android:text="Discussion Room 2"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -338,13 +377,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_num_of_tables"
+                        android:id="@+id/disp_table"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="1"
+                        android:text="X"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -354,7 +393,6 @@
                     android:layout_width="315dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:layout_marginBottom="15dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -369,116 +407,16 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/reservation_details_edittext_num_of_chairs"
+                        android:id="@+id/disp_chair"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="6"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-
-                </LinearLayout>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/reservation_details_date_status_cardview_area"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="21dp"
-            android:layout_marginEnd="21dp"
-            app:cardBackgroundColor="#161f48">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/reservation_details_txt_reservation_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="15dp"
-                        android:text="Reservation Date:"
-                        android:textColor="@color/white"
-                        android:textSize="16dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/reservation_details_edittext_reservation_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginEnd="5dp"
-                        android:ems="10"
-                        android:text="Wednesday, January 15"
+                        android:text="X"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/reservation_status_txt_purpose_sched"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:text="Schedule:"
-                        android:textColor="@color/white"
-                        android:textSize="16dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/reservation_status_edittext_purpose_sched"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:text="Friday, January 17"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/reservation_status_duration"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="100dp"
-                        android:layout_marginTop="5dp"
-                        android:text="1:00PM to 5:00PM (4hrs)"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-
-                    <TextView
-                        android:id="@+id/reservation_status_rooms"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="100dp"
-                        android:layout_marginTop="5dp"
-                        android:text="Room No. 2 (1 Room)"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-                </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -487,32 +425,53 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/reservation_status_real_status"
+                        android:id="@+id/lbl_other"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
-                        android:text="Status:"
+                        android:layout_marginTop="5dp"
+                        android:text="Other Materials:"
                         android:textColor="@color/white"
                         android:textSize="16dp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView21"
-                        android:layout_width="match_parent"
-                        android:layout_height="24dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginEnd="15dp"
-                        android:background="@color/confirm"
-                        android:gravity="center"
-                        android:text="Showed Up"
-                        android:textAlignment="center"
+                        android:id="@+id/disp_other"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
+                        android:ems="10"
+                        android:text="X"
                         android:textColor="@color/white"
-                        android:textStyle="bold"
-                        android:textSize="16sp"/>
+                        android:textSize="16dp" />
 
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/disp_status"
+            android:layout_width="match_parent"
+            android:layout_height="76dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="21dp"
+            android:visibility="gone"
+            app:cardBackgroundColor="@color/cancel">
+
+            <TextView
+                android:id="@+id/res_cancelled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:text="CANCELLED"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
